// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Place component renders correctly 1st place 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#1F2236",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "20%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 20,
            "marginLeft": 10,
            "marginRight": 10,
          },
        ]
      }
    >
      1
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "gold",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome5Free-Solid",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "column",
        "textAlign": "center",
        "width": "50%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
        "textAlign": "right",
        "width": "30%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 17,
            "paddingRight": 10,
          },
        ]
      }
    >
      420
       points
    </Text>
  </View>
</View>
`;

exports[`Place component renders correctly 2nd place 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#1F2236",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "20%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 20,
            "marginLeft": 10,
            "marginRight": 10,
          },
        ]
      }
    >
      1
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "gold",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome5Free-Solid",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "column",
        "textAlign": "center",
        "width": "50%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
        "textAlign": "right",
        "width": "30%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 17,
            "paddingRight": 10,
          },
        ]
      }
    >
      420
       points
    </Text>
  </View>
</View>
`;

exports[`Place component renders correctly 3rd place 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#1F2236",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "20%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 20,
            "marginLeft": 10,
            "marginRight": 10,
          },
        ]
      }
    >
      1
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "gold",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "FontAwesome5Free-Solid",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "fontWeight": "700",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "column",
        "textAlign": "center",
        "width": "50%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
        "textAlign": "right",
        "width": "30%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 17,
            "paddingRight": 10,
          },
        ]
      }
    >
      420
       points
    </Text>
  </View>
</View>
`;

exports[`Place component renders correctly highlighted 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomColor": "#1F2236",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 10,
        "paddingTop": 10,
      },
      Object {
        "backgroundColor": "#8BA9FC",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "20%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 20,
            "marginLeft": 10,
            "marginRight": 10,
          },
        ]
      }
    >
      4
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "column",
        "textAlign": "center",
        "width": "50%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
        "textAlign": "right",
        "width": "30%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 17,
            "paddingRight": 10,
          },
        ]
      }
    >
      420
       points
    </Text>
  </View>
</View>
`;

exports[`Place component renders correctly normally 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#1F2236",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "20%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 20,
            "marginLeft": 10,
            "marginRight": 10,
          },
        ]
      }
    >
      4
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "column",
        "textAlign": "center",
        "width": "50%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "justifyContent": "flex-end",
        "textAlign": "right",
        "width": "30%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1F2236",
            "fontSize": 15,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 17,
            "paddingRight": 10,
          },
        ]
      }
    >
      420
       points
    </Text>
  </View>
</View>
`;
